--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "server": "php -S localhost:8000 -t public",
+    "server": "php -S localhost:8000 -t src/Infra/Http",
     "cs-fix": "php-cs-fixer fix",
     "cs-check": "php-cs-fixer fix --dry-run --diff"
   },
