--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - '${DB_PORT:-3306}:3306'
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./src/Infra/Database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./src/Infra/Database/schemas.sql:/docker-entrypoint-initdb.d/schema.sql
     networks:
       - blog_network
     healthcheck:
@@ -28,6 +28,40 @@ services:
       interval: 5s
       timeout: 3s
       retries: 10
+
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: base
+    container_name: blog_backend
+    restart: unless-stopped
+    environment:
+      APP_ENV: ${APP_ENV:-development}
+      APP_URL: ${APP_URL:-http://localhost:8000}
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: ${DB_USER:-root}
+      DB_PASSWORD: ${DB_PASSWORD:-root}
+      DB_NAME: ${DB_NAME:-blog_db}
+      JWT_SECRET: ${JWT_SECRET:-sua-chave-super-secreta-aqui-minimo-32-caracteres}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-86400}
+      CORS_ORIGIN: ${CORS_ORIGIN:-*}
+    ports:
+      - '8000:8000'
+    volumes:
+      - ./src:/var/www/html/src
+      - ./vendor:/var/www/html/vendor
+    depends_on:
+      mysql:
+        condition: service_healthy
+    networks:
+      - blog_network
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:8000/health']
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   phpmyadmin:
     image: phpmyadmin:latest
